# tw-quant-kronos

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  conftest.py  pyproject.toml  requirements.txt  run_mh_backtest.sh  run_mh_training.sh  run_signal_today.sh  run_signal_today_ensemble.sh  skills-lock.json
autoresearch/: README.md
autoresearch/improve-260622-0042/: handoff.json  improvement-plan.md  prd-ic-ir-early-stopping.md  prd-round2-training-config.md  prd-validation-sample-expansion.md  research-findings.md  summary.md
docs/: README.md  TRADING_GUIDE.md  kronos-external-research-directions.md  kronos-tw-round-history.md  round6-embedding-xgb-lambdarank-improvements.md  round6_artifact_evaluation.md
finetune_tw/: analog.py  backtest.py  backtest_data.py  backtest_next_open.py  backtest_xgb_embedding.py  backtest_xgb_ensemble.py  colab_setup.ipynb  colab_train.py  config.py  db.py  enrich_round6_features.py  eval_forecast.py  eval_tokenizer.py  extract_embeddings.py  feature_engineering.py  grid_search_backtest.py  grid_search_blend_backtest.py  hf_utils.py  ic_validation.py  lambdarank_ic.py  mc_compare.sh  molab_train.py  plot_backtest.py  round6_diagnostics.py  score_oracle.py  signal.py  signal_today_ensemble.py  signal_today_xgb.py  stacking.py  stacking_backtest.py  test_rank_h.py  trading_calendar.py  train_predictor.py  train_tokenizer.py  train_xgb_lambdarank.py  train_xgb_streaming.py  walkforward.py  xreg.py
model/: kronos.py
scripts/: resume_molab_training.sh  run_round6_parallel.sh  run_signal_today.sh  run_signal_today_ensemble.sh
(+69 files in other folders)
