[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "finetune_tw"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "torch>=2.0.0",
    "huggingface_hub",
    "tqdm",
    "einops",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model*"]

[tool.pytest.ini_options]
pythonpath = ["."]
